<resources>
    <string name="app_name">LOC</string>
    <string name="splash_descriptionLogo_text">Logo da marca</string>

    <string name="auth_email_hint">Email</string>
    <string name="auth_content_description">Logo para tela de auth</string>
    <string name="auth_senha_hint">Senha</string>
    <string name="auth_logar_textView">Logar</string>
    <string name="auth_cadastrar_textView">Cadastre-se</string>
    <string name="auth_acessar_button">Acessar</string>
    <string name="menu_anuncios_title">Meus anúncios</string>
    <string name="menu_sair_title">Sair</string>
    <string name="menu_logarCadastrar_title">Logar / Cadastrar</string>

    <string name="title_activity_meus_anuncios">Meus anúncios</string>

    <string name="fab_content_text">FAB para adicionar anúncios</string>
    <string name="criarAnuncio_titulo_hint">Título</string>
    <string name="criarAnuncio_descricao_hint">Descrição</string>
    <string name="criarAnuncio_valor_hint">Valor</string>
    <string name="criarAnuncio_text_button">Criar Anúncio</string>
    <string name="criarAnun_telefone_hint">Telefone</string>
    <string name="anuncios_regiao_button">Região</string>
    <string name="anuncios_divisor_text">|</string>
    <string name="anuncios_categoria_button">Categoria</string>
    <string name="detalhes_text_button">Ver Telefone</string>

    <string-array name="estados">
        <item>UF</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string-array name="categorias">
        <item>Categoria</item>
        <item>Automóveis</item>
        <item>Imóveis</item>
        <item>Eletrónicos</item>
        <item>Moda</item>
        <item>Esportes</item>
        <item>Música</item>
        <item>Infantil</item>
        <item>Outros</item>
    </string-array>
</resources>