<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center"
    tools:context=".activity.AutenticacaoActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/auth_content_description"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/authEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/auth_email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/authSenhaEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/auth_senha_hint"
        android:inputType="textPassword"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_logar_textView" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/authSwitchAcesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:thumbTint="@color/accent_200"
            app:trackTint="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_cadastrar_textView" />
    </LinearLayout>

    <Button
        android:id="@+id/authAcessarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/auth_acessar_button"
        android:theme="@style/butaoPadrao" />
</LinearLayout>