<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CriarAnuncioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/criarAnunImageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/criarAnunImageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/criarAnunImageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/padrao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/criarAnunTituloEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/criarAnuncio_titulo_hint"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/criarAnunValorEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/criarAnuncio_valor_hint"
        android:inputType="number"
        android:padding="10dp" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/criarAnunTelefoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/criarAnun_telefone_hint"
        android:inputType="phone"
        android:padding="10dp"
        app:met_mask="(##) #####-####" />

    <EditText
        android:id="@+id/criarAnunDescricaoEdit"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/criarAnuncio_descricao_hint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorLink="@color/accent_200" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="validarDadosAnuncio"
        android:text="@string/criarAnuncio_text_button"
        android:theme="@style/butaoPadrao" />
</LinearLayout>